Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12581

ILIKE and IREGEXP don't work with non-const argument values

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 4.3.0
    • Impala 4.4.0
    • Backend
    • None
    • ghx-label-4

    Description

      ILIKE and IREGEXP's backend implementation does not set the case-insensitive flag when the argument value is non-constant.

      Example:

      create table ilike_test (x string, y string);
      insert into ilike_test values ('ABC','b');
      select x ilike concat('%', y, '%') from ilike_test;

       

       

      Attachments

        Activity

          People

            eyizoha Zihao Ye
            prozsa Peter Rozsa
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: