IMPALA-12581: Fix issue of ILIKE and IREGEXP not working correctly with non-const pattern

This patch fixes the issue where ILIKE and IREGEXP couldn't ignore case
when encountering non-constant patterns.
For example, 'SELECT 'ABC' ILIKE pattern FROM tbl' would return false
when the pattern in tbl is '%b%'.

Tests:
 - Add TestNonConstPatternILike to test_exprs.py to verify the
   effectiveness of the fixing.

Change-Id: I3d66680f5a7660e6a41859754c4230f276e66712
Reviewed-on: http://gerrit.cloudera.org:8080/20785
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>